[package]
name = "winplayer_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.28"
tokio = { version = "1", features = ["full"] }
md5 = "0.7.0"
[dependencies.windows]
version = "0.44.0"
features = [
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Control",
    "Storage_Streams",
    "System",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",

]